crates/swc_css_parser/tests/errors/rome/invalid/selector6/output.stderr
error: Invalid attribute matcher
 --> $DIR/tests/errors/rome/invalid/selector6/input.css:1:8
  |
1 | a[title%="title"] {
  |        ^

